--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "concurrently": "^4.1.2",
+    "concurrently": "^5.3.0",
     "json-server": "^0.15.1",
     "react": "^16.3",
-    "react-dom": "^16.3"
+    "react-dom": "^16.3",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "react-scripts": "1.0.11"
+    "react-scripts": "^4.0.2"
   },
   "scripts": {
     "start": "concurrently  \"react-scripts start\" \"json-server --watch db.json --port 3005 --delay 500\"",
@@ -17,5 +18,17 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "api": "json-server --watch db.json --port 3005 --delay 500"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
